vX.Y

- Add Docker files and scripts to test building and evaluate a 1
  warehouse PostgreSQL database.

v0.41

- Renamed the 'scripts' directory to 'bin'.
- Added SQLite support.
- Renamed all the script with 'dbt2-' prefixes to facilitate a better
  'make install' in the future.
- Use cmake over autotools.
- Added Drizzle support.
- Removed use of Test::Parser and Test::Presenter perl modules and require use
  of dbttools instead.
- Use R for post processing.
- Run scripts capable of running multiple instances of clients and drivers.
- Direct load data for Postgres.

v0.40

- Various fixes with all the scripts.
- Ability to run in a two-tier environment.
- Added scripts to run a test against a pull from PostgreSQL's CVS repository.
- Fixed 90th percentile and steady state metric calculations.
- Added support for pgpool.
- Fixed memory violation with datagen.

v0.39

- Merged run_mysql.sh script into run_workload.sh script.
- Various fixes with all scripts.
- Fixed up autoconf scripts.  Now database libraries aren't linked to datagen.

v0.38

- Various fixes with all scripts.
- Improved configure.ac to use pg_config for PostgreSQL.
- Updated PostgreSQL scripts to work with PostgreSQL 8.1 and newer.
- Updated PostgreSQL stored functions for 8.1 and newer.

v0.37

- Removed use of the $SHELL environment variable so the kit is more portable.

v0.36

- Added a check for ulimit -n.
- Fixed the response time calculations to be after all threads have started.

v0.35

- Critial fix for the data generator.
- Critial fix for the Payment transaction when using MySQL.
- Changed the database integrity check into a command line option.

v0.34

- Calculate 90th percentile reponse times in scripts/mix_analyzer.pl.
- Fix up in run_mysql.sh.in.

v0.33

- Script improvements.
- Fixed the Makefile for funcs.so.
- Collect callgraph data with oprofile.  Only really works for ia32 and ARM
  due to oprofile support.

v0.32
